@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-24-6
+DATE: 12/31/2024
+STAFF: lec
+#       modified:   littriageload.sh
+wts2-1597/e4g-108/Lit Triage : check needs_review & _New_NewCurrent
+
 TAG: littriageload-6-0-24-5
 DATE: 12/20/2024
 STAFF: lec
